--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "@angular/platform-browser": "^11.0.9",
     "@angular/platform-browser-dynamic": "^11.0.9",
     "@angular/router": "^11.0.9",
+    "lodash": "^4.17.21",
+    "lodash-node": "^3.10.2",
+    "moment": "^2.29.1",
     "rxjs": "^6.6.7",
     "tslib": "^2.1.0",
     "zone.js": "~0.10.2"
@@ -28,6 +31,7 @@
     "@angular/cli": "^11.0.7",
     "@angular/compiler-cli": "^11.0.9",
     "@types/jasmine": "^3.6.9",
+    "@types/lodash": "^4.14.177",
     "@types/node": "^12.20.7",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
